# quest-game

./: .gitignore  Cargo.toml  README.md  scenes-choices.graphml  test.xml  саси нло))) .graphml
console-view/: Cargo.toml  scenes-choices.graphml
console-view/src/: logger.rs  main.rs
parser_graphml/: Cargo.toml
parser_graphml/src/: errors.rs  lib.rs  parser_impl.rs  types.rs
src/: logger.rs  main.rs
web-view/: Cargo.toml  build.rs  index.js  package.json  webpack.config.js
web-view/src/: file_upload_sample.rs  lib.rs  main.rs  root_view.rs
web-view/static/: index.html  styles.css  styles.scss  web-view.js  web-view.wasm
