[package]
name = "quest-game"
version = "0.1.0"
authors = ["Gregory <lobster287@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mdo = "*"
log = "0.4.8"
petgraph = "0.4.13"
simplelog = "^0.7.3"
chrono = "0.4"
parser_graphml = { path = "../parser_graphml" }